--- a/ChatBot/app/src/main/res/layout/activity_chat.xml
+++ b/ChatBot/app/src/main/res/layout/activity_chat.xml
@@ -9,8 +9,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chatList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
         android:layout_marginTop="5dp"/>
 
     <LinearLayout
